Made Responsive calculator body(container) and a Screen

--- a/calculator.html
+++ b/calculator.html
@@ -11,8 +11,16 @@
 </head>
 
 <body>
+    <!-- narrow -->
+    <div class="container-fluid">
+        <div class="col-fluid col-sm-6 col-md-5 col-lg-3 mt-md-4 mx-auto pt-5 pb-3 px-4 bg-info">
+            <div class="screen" id="screen"></div>
+        </div>
+    </div>
+    </div>
 
 </body>
-<script src="calculator.js"></script>
+<script src=" calculator.js">
+</script>
 
 </html>
