--- a/calculator.html
+++ b/calculator.html
@@ -15,10 +15,75 @@
     <div class="container-fluid">
         <div class="col-fluid col-sm-6 col-md-5 col-lg-3 mt-md-4 mx-auto pt-5 pb-3 px-4 bg-info">
             <div class="screen" id="screen"></div>
+            <div class="row px-2">
+                <div class="col-3 p-1 py-2">
+                    <button type="button" class="btn btn-outline-primary">AC</button>
+                </div>
+                <div class="col-3 p-1 py-2">
+                    <button type="button" class="btn btn-outline-primary">Bye</button>
+                </div>
+                <div class="col-3 p-1 py-2">
+                    <button type="button" class="btn btn-outline-primary">Hello</button>
+                </div>
+                <div class="col-3 p-1 py-2">
+                    <button type="button" class="btn btn-outline-primary">÷</button>
+                </div>
+            </div>
+            <div class="row px-2">
+                <div class="col-3 p-1 py-2">
+                    <button type="button" class="btn btn-outline-primary">7</button>
+                </div>
+                <div class="col-3 p-1 py-2">
+                    <button type="button" class="btn btn-outline-primary">8</button>
+                </div>
+                <div class="col-3 p-1 py-2">
+                    <button type="button" class="btn btn-outline-primary">9</button>
+                </div>
+                <div class="col-3 p-1 py-2">
+                    <button type="button" class="btn btn-outline-primary">X</button>
+                </div>
+            </div>
+            <div class="row px-2">
+                <div class="col-3 p-1 py-2">
+                    <button type="button" class="btn btn-outline-primary">6</button>
+                </div>
+                <div class="col-3 p-1 py-2">
+                    <button type="button" class="btn btn-outline-primary">5</button>
+                </div>
+                <div class="col-3 p-1 py-2">
+                    <button type="button" class="btn btn-outline-primary">4</button>
+                </div>
+                <div class="col-3 p-1 py-2">
+                    <button type="button" class="btn btn-outline-primary">-</button>
+                </div>
+            </div>
+            <div class="row px-2">
+                <div class="col-3 p-1 py-2">
+                    <button type="button" class="btn btn-outline-primary">1</button>
+                </div>
+                <div class="col-3 p-1 py-2">
+                    <button type="button" class="btn btn-outline-primary">2</button>
+                </div>
+                <div class="col-3 p-1 py-2">
+                    <button type="button" class="btn btn-outline-primary">3</button>
+                </div>
+                <div class="col-3 p-1 py-2">
+                    <button type="button" class="btn btn-outline-primary">+</button>
+                </div>
+            </div>
+            <div class="row px-2">
+                <div class="col-6 p-1 py-2">
+                    <button type="button" class="btn btn-outline-primary">0</button>
+                </div>
+                <div class="col-3 p-1 py-2">
+                    <button type="button" class="btn btn-outline-primary">.</button>
+                </div>
+                <div class="col-3 p-1 py-2">
+                    <button type="button" class="btn btn-outline-primary">=</button>
+                </div>
+            </div>
         </div>
     </div>
-    </div>
-
 </body>
 <script src=" calculator.js">
 </script>
