--- a/calculator.html
+++ b/calculator.html
@@ -17,69 +17,69 @@
             <div class="screen" id="screen"></div>
             <div class="row px-2">
                 <div class="col-3 p-1 py-2">
-                    <button type="button" class="btn btn-outline-primary">AC</button>
+                    <button type="button" class="btn btn-outline-primary max-wid">AC</button>
                 </div>
                 <div class="col-3 p-1 py-2">
-                    <button type="button" class="btn btn-outline-primary">Bye</button>
+                    <button type="button" class="btn btn-outline-primary max-wid">Bye</button>
                 </div>
                 <div class="col-3 p-1 py-2">
-                    <button type="button" class="btn btn-outline-primary">Hello</button>
+                    <button type="button" class="btn btn-outline-primary max-wid">Hello</button>
                 </div>
                 <div class="col-3 p-1 py-2">
-                    <button type="button" class="btn btn-outline-primary">÷</button>
-                </div>
-            </div>
-            <div class="row px-2">
-                <div class="col-3 p-1 py-2">
-                    <button type="button" class="btn btn-outline-primary">7</button>
-                </div>
-                <div class="col-3 p-1 py-2">
-                    <button type="button" class="btn btn-outline-primary">8</button>
-                </div>
-                <div class="col-3 p-1 py-2">
-                    <button type="button" class="btn btn-outline-primary">9</button>
-                </div>
-                <div class="col-3 p-1 py-2">
-                    <button type="button" class="btn btn-outline-primary">X</button>
+                    <button type="button" class="btn btn-outline-primary max-wid">÷</button>
                 </div>
             </div>
             <div class="row px-2">
                 <div class="col-3 p-1 py-2">
-                    <button type="button" class="btn btn-outline-primary">6</button>
+                    <button type="button" class="btn btn-outline-primary max-wid">7</button>
                 </div>
                 <div class="col-3 p-1 py-2">
-                    <button type="button" class="btn btn-outline-primary">5</button>
+                    <button type="button" class="btn btn-outline-primary max-wid">8</button>
                 </div>
                 <div class="col-3 p-1 py-2">
-                    <button type="button" class="btn btn-outline-primary">4</button>
+                    <button type="button" class="btn btn-outline-primary max-wid">9</button>
                 </div>
                 <div class="col-3 p-1 py-2">
-                    <button type="button" class="btn btn-outline-primary">-</button>
+                    <button type="button" class="btn btn-outline-primary max-wid">X</button>
                 </div>
             </div>
             <div class="row px-2">
                 <div class="col-3 p-1 py-2">
-                    <button type="button" class="btn btn-outline-primary">1</button>
+                    <button type="button" class="btn btn-outline-primary max-wid">6</button>
                 </div>
                 <div class="col-3 p-1 py-2">
-                    <button type="button" class="btn btn-outline-primary">2</button>
+                    <button type="button" class="btn btn-outline-primary max-wid">5</button>
                 </div>
                 <div class="col-3 p-1 py-2">
-                    <button type="button" class="btn btn-outline-primary">3</button>
+                    <button type="button" class="btn btn-outline-primary max-wid">4</button>
                 </div>
                 <div class="col-3 p-1 py-2">
-                    <button type="button" class="btn btn-outline-primary">+</button>
+                    <button type="button" class="btn btn-outline-primary max-wid">-</button>
+                </div>
+            </div>
+            <div class="row px-2">
+                <div class="col-3 p-1 py-2">
+                    <button type="button" class="btn btn-outline-primary max-wid">1</button>
+                </div>
+                <div class="col-3 p-1 py-2">
+                    <button type="button" class="btn btn-outline-primary max-wid">2</button>
+                </div>
+                <div class="col-3 p-1 py-2">
+                    <button type="button" class="btn btn-outline-primary max-wid">3</button>
+                </div>
+                <div class="col-3 p-1 py-2">
+                    <button type="button" class="btn btn-outline-primary max-wid">+</button>
                 </div>
             </div>
             <div class="row px-2">
                 <div class="col-6 p-1 py-2">
-                    <button type="button" class="btn btn-outline-primary">0</button>
+                    <button type="button" class="btn btn-outline-primary max-wid">0</button>
                 </div>
                 <div class="col-3 p-1 py-2">
-                    <button type="button" class="btn btn-outline-primary">.</button>
+                    <button type="button" class="btn btn-outline-primary max-wid">.</button>
                 </div>
                 <div class="col-3 p-1 py-2">
-                    <button type="button" class="btn btn-outline-primary">=</button>
+                    <button type="button" class="btn btn-outline-primary max-wid">=</button>
                 </div>
             </div>
         </div>
