--- a/calculator.html
+++ b/calculator.html
@@ -14,7 +14,7 @@
     <!-- narrow -->
     <div class="container-fluid">
         <div class="col-fluid col-sm-6 col-md-5 col-lg-3 mt-md-4 mx-auto pt-5 pb-3 px-4 bg-info">
-            <div class="screen" id="screen"></div>
+            <div class="screen" id="screen">0</div>
             <div class="row px-2">
                 <div class="col-3 p-1 py-2">
                     <button type="button" class="btn btn-outline-primary max-wid">AC</button>
@@ -31,13 +31,13 @@
             </div>
             <div class="row px-2">
                 <div class="col-3 p-1 py-2">
-                    <button type="button" class="btn btn-outline-primary max-wid">7</button>
+                    <button type="button" class="btn btn-outline-primary max-wid" onclick="getInput('7')">7</button>
                 </div>
                 <div class="col-3 p-1 py-2">
-                    <button type="button" class="btn btn-outline-primary max-wid">8</button>
+                    <button type="button" class="btn btn-outline-primary max-wid" onclick="getInput('8')">8</button>
                 </div>
                 <div class="col-3 p-1 py-2">
-                    <button type="button" class="btn btn-outline-primary max-wid">9</button>
+                    <button type="button" class="btn btn-outline-primary max-wid" onclick="getInput('9')">9</button>
                 </div>
                 <div class="col-3 p-1 py-2">
                     <button type="button" class="btn btn-outline-primary max-wid">X</button>
@@ -45,13 +45,13 @@
             </div>
             <div class="row px-2">
                 <div class="col-3 p-1 py-2">
-                    <button type="button" class="btn btn-outline-primary max-wid">6</button>
+                    <button type="button" class="btn btn-outline-primary max-wid" onclick="getInput('6')">6</button>
                 </div>
                 <div class="col-3 p-1 py-2">
-                    <button type="button" class="btn btn-outline-primary max-wid">5</button>
+                    <button type="button" class="btn btn-outline-primary max-wid" onclick="getInput('5')">5</button>
                 </div>
                 <div class="col-3 p-1 py-2">
-                    <button type="button" class="btn btn-outline-primary max-wid">4</button>
+                    <button type="button" class="btn btn-outline-primary max-wid" onclick="getInput('4')">4</button>
                 </div>
                 <div class="col-3 p-1 py-2">
                     <button type="button" class="btn btn-outline-primary max-wid">-</button>
@@ -59,13 +59,13 @@
             </div>
             <div class="row px-2">
                 <div class="col-3 p-1 py-2">
-                    <button type="button" class="btn btn-outline-primary max-wid">1</button>
+                    <button type="button" class="btn btn-outline-primary max-wid" onclick="getInput('1')">1</button>
                 </div>
                 <div class="col-3 p-1 py-2">
-                    <button type="button" class="btn btn-outline-primary max-wid">2</button>
+                    <button type="button" class="btn btn-outline-primary max-wid" onclick="getInput('2')">2</button>
                 </div>
                 <div class="col-3 p-1 py-2">
-                    <button type="button" class="btn btn-outline-primary max-wid">3</button>
+                    <button type="button" class="btn btn-outline-primary max-wid" onclick="getInput('3')">3</button>
                 </div>
                 <div class="col-3 p-1 py-2">
                     <button type="button" class="btn btn-outline-primary max-wid">+</button>
@@ -73,10 +73,10 @@
             </div>
             <div class="row px-2">
                 <div class="col-6 p-1 py-2">
-                    <button type="button" class="btn btn-outline-primary max-wid">0</button>
+                    <button type="button" class="btn btn-outline-primary max-wid" onclick="getInput('0')">0</button>
                 </div>
                 <div class="col-3 p-1 py-2">
-                    <button type="button" class="btn btn-outline-primary max-wid">.</button>
+                    <button type="button" class="btn btn-outline-primary max-wid" onclick="getInput('.')">.</button>
                 </div>
                 <div class="col-3 p-1 py-2">
                     <button type="button" class="btn btn-outline-primary max-wid">=</button>
@@ -84,6 +84,7 @@
             </div>
         </div>
     </div>
+
 </body>
 <script src=" calculator.js">
 </script>
