--- a/calculator.html
+++ b/calculator.html
@@ -14,7 +14,7 @@
     <!-- narrow -->
     <div class="container-fluid">
         <div class="col-fluid col-sm-6 col-md-5 col-lg-3 mt-md-4 mx-auto pt-5 pb-3 px-4 bg-info">
-            <div class="screen" id="screen"></div>
+            <div class="screen" id="screen">0</div>
             <div class="row px-2">
                 <div class="col-3 p-1 py-2">
                     <button type="button" class="btn btn-outline-primary max-wid" id="clear-btn">AC</button>
