Added getOperator function

--- a/calculator.html
+++ b/calculator.html
@@ -26,7 +26,7 @@
                     <button type="button" class="btn btn-outline-primary max-wid">Hello</button>
                 </div>
                 <div class="col-3 p-1 py-2">
-                    <button type="button" class="btn btn-outline-primary max-wid">÷</button>
+                    <button type="button" class="btn btn-outline-primary max-wid" onclick="getOperator('/')">÷</button>
                 </div>
             </div>
             <div class="row px-2">
@@ -40,7 +40,7 @@
                     <button type="button" class="btn btn-outline-primary max-wid" onclick="getInput('9')">9</button>
                 </div>
                 <div class="col-3 p-1 py-2">
-                    <button type="button" class="btn btn-outline-primary max-wid">X</button>
+                    <button type="button" class="btn btn-outline-primary max-wid" onclick="getOperator('*')">X</button>
                 </div>
             </div>
             <div class="row px-2">
@@ -54,7 +54,7 @@
                     <button type="button" class="btn btn-outline-primary max-wid" onclick="getInput('4')">4</button>
                 </div>
                 <div class="col-3 p-1 py-2">
-                    <button type="button" class="btn btn-outline-primary max-wid">-</button>
+                    <button type="button" class="btn btn-outline-primary max-wid" onclick="getOperator('-')">-</button>
                 </div>
             </div>
             <div class="row px-2">
@@ -68,7 +68,7 @@
                     <button type="button" class="btn btn-outline-primary max-wid" onclick="getInput('3')">3</button>
                 </div>
                 <div class="col-3 p-1 py-2">
-                    <button type="button" class="btn btn-outline-primary max-wid">+</button>
+                    <button type="button" class="btn btn-outline-primary max-wid" onclick="getOperator('+')">+</button>
                 </div>
             </div>
             <div class="row px-2">
