Changed zero-button and dot-button onclick function into addEventListener. See: #3

--- a/calculator.html
+++ b/calculator.html
@@ -73,10 +73,10 @@
             </div>
             <div class="row px-2">
                 <div class="col-6 p-1 py-2">
-                    <button type="button" class="btn btn-outline-primary max-wid" onclick="getInput('0')">0</button>
+                    <button type="button" class="btn btn-outline-primary max-wid" id="zero-btn">0</button>
                 </div>
                 <div class="col-3 p-1 py-2">
-                    <button type="button" class="btn btn-outline-primary max-wid" onclick="getInput('.')">.</button>
+                    <button type="button" class="btn btn-outline-primary max-wid" id="dot-btn">.</button>
                 </div>
                 <div class="col-3 p-1 py-2">
                     <button type="button" class="btn btn-outline-primary max-wid">=</button>
