Added compute function

--- a/calculator.html
+++ b/calculator.html
@@ -79,7 +79,7 @@
                     <button type="button" class="btn btn-outline-primary max-wid" id="dot-btn">.</button>
                 </div>
                 <div class="col-3 p-1 py-2">
-                    <button type="button" class="btn btn-outline-primary max-wid">=</button>
+                    <button type="button" class="btn btn-outline-primary max-wid" onclick="compute()">=</button>
                 </div>
             </div>
         </div>
