--- a/calculator.html
+++ b/calculator.html
@@ -20,55 +20,55 @@
                     <button type="button" class="btn btn-outline-primary max-wid" id="clear-btn">AC</button>
                 </div>
                 <div class="col-3 p-1 py-2">
-                    <button type="button" class="btn btn-outline-primary max-wid">Bye</button>
+                    <button type="button" class="btn btn-outline-primary max-wid" id="bye-btn">Bye</button>
                 </div>
                 <div class="col-3 p-1 py-2">
-                    <button type="button" class="btn btn-outline-primary max-wid">Hello</button>
+                    <button type="button" class="btn btn-outline-primary max-wid" id="hello-btn">Hello</button>
                 </div>
                 <div class="col-3 p-1 py-2">
-                    <button type="button" class="btn btn-outline-primary max-wid" onclick="getOperator('/')">÷</button>
-                </div>
-            </div>
-            <div class="row px-2">
-                <div class="col-3 p-1 py-2">
-                    <button type="button" class="btn btn-outline-primary max-wid" onclick="getInput('7')">7</button>
-                </div>
-                <div class="col-3 p-1 py-2">
-                    <button type="button" class="btn btn-outline-primary max-wid" onclick="getInput('8')">8</button>
-                </div>
-                <div class="col-3 p-1 py-2">
-                    <button type="button" class="btn btn-outline-primary max-wid" onclick="getInput('9')">9</button>
-                </div>
-                <div class="col-3 p-1 py-2">
-                    <button type="button" class="btn btn-outline-primary max-wid" onclick="getOperator('*')">X</button>
+                    <button type="button" class="btn btn-outline-primary max-wid" id="divide-btn" value="/">÷</button>
                 </div>
             </div>
             <div class="row px-2">
                 <div class="col-3 p-1 py-2">
-                    <button type="button" class="btn btn-outline-primary max-wid" onclick="getInput('6')">6</button>
+                    <button type="button" class="btn btn-outline-primary max-wid" id="seven-btn" value="7">7</button>
                 </div>
                 <div class="col-3 p-1 py-2">
-                    <button type="button" class="btn btn-outline-primary max-wid" onclick="getInput('5')">5</button>
+                    <button type="button" class="btn btn-outline-primary max-wid" id="eight-btn" value="8">8</button>
                 </div>
                 <div class="col-3 p-1 py-2">
-                    <button type="button" class="btn btn-outline-primary max-wid" onclick="getInput('4')">4</button>
+                    <button type="button" class="btn btn-outline-primary max-wid" id="nine-btn" value="9">9</button>
                 </div>
                 <div class="col-3 p-1 py-2">
-                    <button type="button" class="btn btn-outline-primary max-wid" onclick="getOperator('-')">-</button>
+                    <button type="button" class="btn btn-outline-primary max-wid" id="times-btn" value="*">X</button>
                 </div>
             </div>
             <div class="row px-2">
                 <div class="col-3 p-1 py-2">
-                    <button type="button" class="btn btn-outline-primary max-wid" onclick="getInput('1')">1</button>
+                    <button type="button" class="btn btn-outline-primary max-wid" id="six-btn" value="6">6</button>
                 </div>
                 <div class="col-3 p-1 py-2">
-                    <button type="button" class="btn btn-outline-primary max-wid" onclick="getInput('2')">2</button>
+                    <button type="button" class="btn btn-outline-primary max-wid" id="five-btn" value="5">5</button>
                 </div>
                 <div class="col-3 p-1 py-2">
-                    <button type="button" class="btn btn-outline-primary max-wid" onclick="getInput('3')">3</button>
+                    <button type="button" class="btn btn-outline-primary max-wid" id="four-btn" value="4">4</button>
                 </div>
                 <div class="col-3 p-1 py-2">
-                    <button type="button" class="btn btn-outline-primary max-wid" onclick="getOperator('+')">+</button>
+                    <button type="button" class="btn btn-outline-primary max-wid" id="minus-btn" value="-">-</button>
+                </div>
+            </div>
+            <div class="row px-2">
+                <div class="col-3 p-1 py-2">
+                    <button type="button" class="btn btn-outline-primary max-wid" id="one-btn" value="1">1</button>
+                </div>
+                <div class="col-3 p-1 py-2">
+                    <button type="button" class="btn btn-outline-primary max-wid" id="two-btn" value="2">2</button>
+                </div>
+                <div class="col-3 p-1 py-2">
+                    <button type="button" class="btn btn-outline-primary max-wid" id="three-btn" value="3">3</button>
+                </div>
+                <div class="col-3 p-1 py-2">
+                    <button type="button" class="btn btn-outline-primary max-wid" id="plus-btn" value="+">+</button>
                 </div>
             </div>
             <div class="row px-2">
@@ -79,7 +79,7 @@
                     <button type="button" class="btn btn-outline-primary max-wid" id="dot-btn">.</button>
                 </div>
                 <div class="col-3 p-1 py-2">
-                    <button type="button" class="btn btn-outline-primary max-wid" onclick="compute()">=</button>
+                    <button type="button" class="btn btn-outline-primary max-wid" id="equal-btn">=</button>
                 </div>
             </div>
         </div>
