Edited bye-btn button function and Change color of calculator case and buttons

--- a/calculator.html
+++ b/calculator.html
@@ -13,73 +13,73 @@
 <body>
     <!-- narrow -->
     <div class="container-fluid">
-        <div class="col-fluid col-sm-6 col-md-5 col-lg-3 mt-md-4 mx-auto pt-5 pb-3 px-4 bg-info">
+        <div class="col-fluid col-sm-6 col-md-5 col-lg-3 mt-md-4 mx-auto pt-5 pb-3 px-4 gray-case">
             <div class="screen" id="screen">0</div>
             <div class="row px-2">
                 <div class="col-3 p-1 py-2">
-                    <button type="button" class="btn btn-outline-primary max-wid" id="clear-btn">AC</button>
+                    <button type="button" class="btn gray-btn max-wid" id="clear-btn">AC</button>
                 </div>
                 <div class="col-3 p-1 py-2">
-                    <button type="button" class="btn btn-outline-primary max-wid" id="bye-btn">Bye</button>
+                    <button type="button" class="btn blue-btn max-wid" id="bye-btn">Bye</button>
                 </div>
                 <div class="col-3 p-1 py-2">
-                    <button type="button" class="btn btn-outline-primary max-wid" id="hello-btn">Hello</button>
+                    <button type="button" class="btn blue-btn max-wid" id="hello-btn">Hello</button>
                 </div>
                 <div class="col-3 p-1 py-2">
-                    <button type="button" class="btn btn-outline-primary max-wid" id="divide-btn" value="/">÷</button>
-                </div>
-            </div>
-            <div class="row px-2">
-                <div class="col-3 p-1 py-2">
-                    <button type="button" class="btn btn-outline-primary max-wid" id="seven-btn" value="7">7</button>
-                </div>
-                <div class="col-3 p-1 py-2">
-                    <button type="button" class="btn btn-outline-primary max-wid" id="eight-btn" value="8">8</button>
-                </div>
-                <div class="col-3 p-1 py-2">
-                    <button type="button" class="btn btn-outline-primary max-wid" id="nine-btn" value="9">9</button>
-                </div>
-                <div class="col-3 p-1 py-2">
-                    <button type="button" class="btn btn-outline-primary max-wid" id="times-btn" value="*">X</button>
+                    <button type="button" class="btn yellow-btn max-wid" id="divide-btn" value="/">÷</button>
                 </div>
             </div>
             <div class="row px-2">
                 <div class="col-3 p-1 py-2">
-                    <button type="button" class="btn btn-outline-primary max-wid" id="six-btn" value="6">6</button>
+                    <button type="button" class="btn gray-btn max-wid" id="seven-btn" value="7">7</button>
                 </div>
                 <div class="col-3 p-1 py-2">
-                    <button type="button" class="btn btn-outline-primary max-wid" id="five-btn" value="5">5</button>
+                    <button type="button" class="btn gray-btn max-wid" id="eight-btn" value="8">8</button>
                 </div>
                 <div class="col-3 p-1 py-2">
-                    <button type="button" class="btn btn-outline-primary max-wid" id="four-btn" value="4">4</button>
+                    <button type="button" class="btn gray-btn max-wid" id="nine-btn" value="9">9</button>
                 </div>
                 <div class="col-3 p-1 py-2">
-                    <button type="button" class="btn btn-outline-primary max-wid" id="minus-btn" value="-">-</button>
+                    <button type="button" class="btn yellow-btn max-wid" id="times-btn" value="*">X</button>
                 </div>
             </div>
             <div class="row px-2">
                 <div class="col-3 p-1 py-2">
-                    <button type="button" class="btn btn-outline-primary max-wid" id="one-btn" value="1">1</button>
+                    <button type="button" class="btn gray-btn max-wid" id="six-btn" value="6">6</button>
                 </div>
                 <div class="col-3 p-1 py-2">
-                    <button type="button" class="btn btn-outline-primary max-wid" id="two-btn" value="2">2</button>
+                    <button type="button" class="btn gray-btn max-wid" id="five-btn" value="5">5</button>
                 </div>
                 <div class="col-3 p-1 py-2">
-                    <button type="button" class="btn btn-outline-primary max-wid" id="three-btn" value="3">3</button>
+                    <button type="button" class="btn gray-btn max-wid" id="four-btn" value="4">4</button>
                 </div>
                 <div class="col-3 p-1 py-2">
-                    <button type="button" class="btn btn-outline-primary max-wid" id="plus-btn" value="+">+</button>
+                    <button type="button" class="btn yellow-btn max-wid" id="minus-btn" value="-">-</button>
+                </div>
+            </div>
+            <div class="row px-2">
+                <div class="col-3 p-1 py-2">
+                    <button type="button" class="btn gray-btn max-wid" id="one-btn" value="1">1</button>
+                </div>
+                <div class="col-3 p-1 py-2">
+                    <button type="button" class="btn gray-btn max-wid" id="two-btn" value="2">2</button>
+                </div>
+                <div class="col-3 p-1 py-2">
+                    <button type="button" class="btn gray-btn max-wid" id="three-btn" value="3">3</button>
+                </div>
+                <div class="col-3 p-1 py-2">
+                    <button type="button" class="btn yellow-btn max-wid" id="plus-btn" value="+">+</button>
                 </div>
             </div>
             <div class="row px-2">
                 <div class="col-6 p-1 py-2">
-                    <button type="button" class="btn btn-outline-primary max-wid" id="zero-btn">0</button>
+                    <button type="button" class="btn gray-btn max-wid" id="zero-btn">0</button>
                 </div>
                 <div class="col-3 p-1 py-2">
-                    <button type="button" class="btn btn-outline-primary max-wid" id="dot-btn">.</button>
+                    <button type="button" class="btn gray-btn max-wid" id="dot-btn">.</button>
                 </div>
                 <div class="col-3 p-1 py-2">
-                    <button type="button" class="btn btn-outline-primary max-wid" id="equal-btn">=</button>
+                    <button type="button" class="btn yellow-btn max-wid" id="equal-btn">=</button>
                 </div>
             </div>
         </div>
